--- a/public/index.html
+++ b/public/index.html
@@ -5,31 +5,40 @@
       <title>Exercise Tracker | Free Code Camp</title>
       <link rel="shortcut icon" href="https://cdn.hyperdev.com/us-east-1%3A52a203ff-088b-420f-81be-45bf559d01b1%2Ffavicon.ico" type="image/x-icon"/>
       <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
-      <link href="style.css" rel="stylesheet" type="text/css">
+      <link href="css/style.css" rel="stylesheet" type="text/css">
    </head>
 
    <body>
       <div class="container">
-         <h1>Exercise tracker</h1>
+         <h1>Exercise tracker API Testing</h1>
+
           <form action="/api/exercise/new-user" method="post">
             <h3>Create a New User</h3>
             <p><code>POST /api/exercise/new-user</code></p>
-            <input id="uname" type="text" name="username" placeholder="username">
+            <input id="uname" type="text" name="username" placeholder="username" required>
             <input type="submit" value="Submit">
           </form>
+
+          <form action="/api/exercise/users" method="get">
+            <h3>Get all Users</h3>
+            <p><code>GET /api/exercise/users</code></p>
+            <input type="submit" value="Submit">
+          </form>
+
           <form action="/api/exercise/add" method="post">
             <h3>Add exercises</h3>
             <p><code>POST /api/exercise/add</code></p>
-            <input id="uid" type="text" name="userId" placeholder="userId*">
-            <input id="desc" type="text" name="description" placeholder="description*">
-            <input id="dur" type="text" name="duration" placeholder="duration* (mins.)">
+            <input id="uid" type="text" name="userId" placeholder="userId*" required>
+            <input id="desc" type="text" name="description" placeholder="description* " required>
+            <input id="dur" type="text" name="duration" placeholder="duration* (mins.)" required>
             <input id="dat" type="text" name="date" placeholder="date (yyyy-mm-dd)">
             <input type="submit" value="Submit">
           </form>
+
           <form action="/api/exercise/log" method="g">
             <h3>Get exercises for User</h3>
             <p><code>GET /api/exercise/log</code></p>
-            <input id="userid" type="text" name="userId" placeholder="userId*">
+            <input id="userid" type="text" name="userId" placeholder="userId*" required>
             <input id="from" type="text" name="from" placeholder="date (yyyy-mm-dd)">
             <input id="to" type="text" name="to" placeholder="date (yyyy-mm-dd)">
             <input id="limit" type="number" name="limit" min="0" placeholder="limit (2)">
